Add new leetcode problems and dsa